# agent-plugins

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/agent_plugins/: __init__.py  __main__.py
src/agent_plugins/commands/: plugin-manager.md
