[project]
name = "agent-plugins"
version = "0.1.0"
description = "Universal plugin manager for AI coding agents. Mirrors Claude Code's plugin system across Claude, OpenCode, Codex, Gemini, and more."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jordan"}
]
keywords = ["ai", "agents", "plugins", "skills", "claude", "opencode", "codex", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0.0",
    "readchar>=4.0.0",
]

[project.scripts]
agent-plugins = "agent_plugins:main"

[project.urls]
Homepage = "https://github.com/jasonkneen/agent-plugins"
Repository = "https://github.com/jasonkneen/agent-plugins"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_plugins"]
